--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,42 @@
-.env
+# Node.js dependencies
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Build output
+/dist
+/build
+/.next
+/out
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+# Logs
+logs
+*.log
+
+# Coverage
+coverage/
+
+# Misc
+*.tgz
+*.zip
+
+# Optional: Ignore test output
+/test-output/
