cafeteria nuevo diseño y cuentas

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # Usando psql (desde terminal)
-PGPASSWORD=NodFNNsyBPAIrSVfForbJcbuDOyZbCOZ psql -h switchback.proxy.rlwy.net -U postgres -p 39449 -d railway -f database-setup.sql
+PGPASSWORD=PGPASSWORD=opCoXoxBaIBzyGGzwLPVCfFTitpUJePn psql -h metro.proxy.rlwy.net -U postgres -p 31829 -d railway
